<resources>
    <string name="app_name">Register1</string>
    <string name="title">Grape Diseases Identification Guide</string>
    <string name="intro_1">"\u3000For a rich production and quality, it is necessary to follow and identify in advance the diseases and pests that can affect the vine culture. Weather conditions are the first factor influencing the presence of a pathogen or disease, followed by the disease history and the vine\'s susceptibility. This means that the severity of diseases varies from year to year."</string>
    <string name="intro_2">"\u3000The purpose of this guide is to aid in the identification of grape diseases and in pest management decision-making.
        Accurate identification of pests is critical to an effective management program that provides optimal control while minimizing pesticide use."</string>
    <string name="subLegend">Favourable conditions for disease development</string>
    <string name="prevention">"\u3000A variety of aspects must be considered while selecting grape varieties. Planting disease-resistant cultivars is a practical approach to avoid outbreaks. Air and soil drainage will be improved by orienting rows N-S and utilising topographical gradients. The pathogen population are reduced at the beginning of the season if the infected debris is destroyed and buried.
        Canopy management (pruning, shoot placement, and leaf removal) improves air circulation, enhancing leaf drying and fungicide penetration. It is also essential that vineyards are inspected regularly during the growing season to monitor the presence and development of diseases.
        At harvest and the end of the season, the presence of diseases on the leaves must be evaluated to predict the degree of inoculum present the following spring."</string>
    <string name="control">"\u3000Grapes are a crop that is vulnerable to a variety of diseases. The degree of vulnerability varies based on the grape species. When pest management is not performed, the harm can be severe."</string>


    <string name="black_rot">"\u3000Guignardia bidwellii is one of the most common and aggressive diseases of the vine culture, which causes the Black Rot. Black Rot is a severe disease of cultivated and wild grapes affecting large wine-growing areas.
    The disease is most damaging during warm, rainy seasons; it spreads rapidly and can cause damage from 5% to 80% of the crop. It is aggressive when the temperatures fall between 9 and 30 degrees Celsius and the humidity level is high.
   The pathogen attacks all the green organs of the plant: leaves, shoots, bunches. The fruit suffers the most damage."</string>
    <string name="risk_factors_br">"• prolonged rains;\n• air humidity level above 85%;\n• fungal infection occurs only if the organs on which it can develop are moistened (precipitation, dew, sprinkler irrigation);\n• the minimum germination temperature of the spores is 9°C;\n• the optimum germination temperature is 20-26°C (temperatures above 32°C are lethal to mycelium)."</string>
    <string name="etiological_factor">"\u3000<b>Etiological factor</b> - the one that causes the infection itself, the fungus Guignardia bidwellii; the existence of an outbreak of infection which has not been sanitized or in respect of which quarantine measures have not been complied with may lead to the spread of the disease over large areas;"</string>
    <string name="risk_factor">"\u3000<b>Risk factors</b> - those that favor the development of the disease; among them, the most important are:"</string>
    <string name="climatic_conditions">"\u3000<b>Climatic conditions</b> - before choosing the varieties of vines you want to grow, it is advisable to consider the climatic conditions, soil quality, and the risks that exist in terms of infection with Guignardia bidwellii; if the best conditions are met, the plant\'s defense mechanisms will function normally;"</string>
    <string name="agro_technical">"\u3000<b>Carrying out the agro-technical works on time and correctly</b> - because the disease spreads starting from the initial outbreaks, which appear in early spring, one of the measures to prevent the spread of the infection is to extinguish these outbreaks by:"</string>
    <string name="weed_control">"\u3000<b>Weed control</b> - to avoid soil moisture, conducive to fungal infections."</string>

    <string name="esca_causes">"\u3000Esca can be caused by a series of Phaeomoniella chlamydospora, Phaeoacremonium aleophilum. The disease can mainly affect the stumps, trunk, and arms of the stumps. It is a disease of the wooden vessels that blocks the circulation of water and nutrients.\n　Logs that are declining, old, or have gone through periods of severe abiotic stress are the most affected. Also, esca can have two main forms: marbling of the leaves, which manifests more slowly, on the vine leaves, respectively apoplexy, which is a serious form.\n　The disease is spread by grafts harvested from infected plants, wounds resulting from spring pruning, or as a result of phenomena such as hail. Climatic conditions, cutting system, the shape of the plant, and especially the variety are other essential factors."</string>
    <string name="esca_symptoms">"\u3000The marbling of the leaves can be seen in June. Symptoms are small isolated spots, reddish or yellow, depending on the variety. These spots begin to necrotic, showing a yellow border.\n Apoplexy can occur between July and August, especially in situations of heat and drought. Growers can easily recognize this shape because the leaves wither suddenly, and the stem dries in just a few days. Even if the grapes wither and turn brown, they can stay on the ropes for a while. The symptoms are typical in vineyards that are five to seven years old. Prune wounds aid pathogen entry and establishment."</string>
    <string name="esca_prevention">"\u3000Currently, there is no effective solution to manage this disease. Plants should not receive excess nitrogen and should not be deprived of water. Pruning should be carried out during periods without wind or rain, and the resulting debris and logs or other parts that have already been affected should be removed from the plantation and burned. The fungal infection minimizes if the prune wounds are protected using wound sealant (5% boric acid in acrylic paint), essential oil, or suitable fungicides."</string>

    <string name="blight_causes">"\u3000Pseudocercospora Vitis causes Leaf Blight disease. Typically found in tropical and subtropical grapes, this disease develops late in the season, particularly under humid conditions. This pathogen is capable of infecting Cynthiana and Cabernet Sauvignon grape varieties."</string>
    <string name="blight_symptoms">"\u3000The leaf surface presents lesions having uneven shapes (2 to 25 mm in diameter). Lesions are initially dull red to brown in appearance but eventually turn black. If the disease progresses, these lesions might merge. The symptom on berries is similar to black rot, except the entire cluster will collapse. It affects both seedlings and mature plants."</string>
    <string name="blight_prevention">"\u3000Fungicides used to prevent other diseases during the season may also contribute to minimizing this disease."</string>
</resources>