<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".GuideActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp"
            android:text="Introduction"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/intro_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro"
            android:justificationMode="inter_word"
            android:text="@string/intro_1"/>
        <ImageView
            android:id="@+id/vineyard_1"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_below="@+id/intro_1"
            android:src="@drawable/intro_vineyard"/>
        <TextView
            android:id="@+id/intro_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vineyard_1"
            android:justificationMode="inter_word"
            android:text="@string/intro_2"/>
        <TextView
            android:id="@+id/legd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_2"
            android:layout_marginTop="20dp"
            android:text="Legend"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sublegend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/legd"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/subLegend"
            android:textAlignment="center"
            android:textStyle="italic"/>
        <ImageView
            android:id="@+id/fav_cond"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/sublegend"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/fav_cond"/>
        <ImageView
            android:id="@+id/fav_temp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/fav_cond"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/fav_temp_2"/>
        <LinearLayout
            android:id="@+id/clouds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fav_temp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cloudy" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/rainy"/>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/rain_on_ground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/clouds_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clouds"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Cloudy weather"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Rainy with light showers"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Rainy with heavy showers and water accumulation on the ground"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clouds_text"
            android:layout_marginTop="20dp"
            android:text="Grape diseases management"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/man"
            android:layout_marginTop="5dp"
            android:text="Prevention"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/prev_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prevention"
            android:justificationMode="inter_word"
            android:text="@string/prevention"/>
        <TextView
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prev_text"
            android:layout_marginTop="5dp"
            android:text="Control"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/control_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/control"
            android:justificationMode="inter_word"
            android:text="@string/control"/>
        <TextView
            android:id="@+id/prin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/control_text"
            android:text="Principal grape diseases"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prin"
            android:layout_marginBottom="20dp"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="3">
            <androidx.cardview.widget.CardView
                android:id="@+id/black_rot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Black Rot"
                    android:textSize="20sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/esca"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Esca"
                    android:textSize="20sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/leaf_blight"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Leaf Blight"
                    android:textSize="20sp"/>
            </androidx.cardview.widget.CardView>
        </GridLayout>

    </RelativeLayout>

</ScrollView>